--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </ul>
     </div>
 <div class="top-right">
-    <i></i>
-      <a href="#" class="connect"><span class="iconify" data-icon="ic:round-greater-than" data-inline="false"></span>Connect wallet</a>
+    <span class="iconify" data-icon="ic:round-greater-than" data-inline="false"></span>
+      <a href="#" class="connect">Connect wallet</a>
     </div>
     </nav>
 
